<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>za.scratch.game</groupId>
    <artifactId>scratch-game</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>rewards</module>
        <module>scratch-application</module>
        <module>matrix-generator</module>
        <module>configure-file-input</module>
        <module>scratch-game-service</module>
        <module>scratch-game-common-models</module>
        <module>scratch-game-interfaces</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>


        <lombok.version>1.18.30</lombok.version>
        <junit-jupiter.version>5.8.1</junit-jupiter.version>
        <mockito.version>5.7.0</mockito.version>
        <commons-cli.version>1.4</commons-cli.version>

        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
        <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>

        <project.encoding>UTF-8</project.encoding>

        <scratch-formatting.version>1.0-SNAPSHOT</scratch-formatting.version>
        <scratch-rewards.version>1.0-SNAPSHOT</scratch-rewards.version>
        <matrix-generator.version>1.0-SNAPSHOT</matrix-generator.version>
        <configure-file-input.version>1.0-SNAPSHOT</configure-file-input.version>
        <scratch-game-common.version>1.0-SNAPSHOT</scratch-game-common.version>
        <scratch-game-service.version>1.0-SNAPSHOT</scratch-game-service.version>
        <scratch-game-interfaces.version>1.0-SNAPSHOT</scratch-game-interfaces.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>${commons-cli.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>za.scratch.game</groupId>
                <artifactId>scratch-game-common-models</artifactId>
                <version>${scratch-game-common.version}</version>
            </dependency>
            <dependency>
                <groupId>za.scratch.game</groupId>
                <artifactId>rewards</artifactId>
                <version>${scratch-rewards.version}</version>
            </dependency>
            <dependency>
                <groupId>za.scratch.game</groupId>
                <artifactId>matrix-generator</artifactId>
                <version>${matrix-generator.version}</version>
            </dependency>
            <dependency>
                <groupId>za.scratch.game</groupId>
                <artifactId>scratch-game-service</artifactId>
                <version>${scratch-game-service.version}</version>
            </dependency>
            <dependency>
                <groupId>za.scratch.game</groupId>
                <artifactId>configure-file-input</artifactId>
                <version>${configure-file-input.version}</version>
            </dependency>
            <dependency>
                <groupId>za.scratch.game</groupId>
                <artifactId>scratch-game-interfaces</artifactId>
                <version>${scratch-game-interfaces.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <finalName>scratch-game</finalName>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>
                            --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
                            --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
                            --add-opens=java.base/java.lang=ALL-UNNAMED
                            --add-opens=java.base/java.util=ALL-UNNAMED
                            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                            --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
                            --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    <parameters>true</parameters>
                    <encoding>${project.encoding}</encoding>
                    <annotationProcessorPaths>
                        <annotationProcessorPath>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </annotationProcessorPath>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>